# SlicerLib

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Base.hpp  Exception.hpp  Exporter.hpp  Filler.hpp  Slicer.hpp  Supporter.hpp  slicer.hpp
test/lua/: test.lua
